--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,16 +1,52 @@
 *{
     margin: 10px;
     padding: 0;
-    background-color: blanchedalmond;
+    background-color: #19A7CE;
 }
 
 .container{
-    border: 3px groove black;
-    border-style: ridge;
+    background-color: #B0DAFF;
+    border: 7px solid #FEFF86;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 500px;
+} 
+
+button{
+    background-color: yellow;
+    padding: 10px;
+    border-radius: 12px;
+    font-weight: bold;
 }
 
 
 input{
+    background-color: yellow;
     border: 3px solid black;
+    border-radius: 12px;
     display: flex;
+    padding: 20px;
+    font-weight: bold;
+} 
+
+.height, label, .weight, h2{
+    background-color: #B0DAFF;
+} 
+
+h2 {
+    font-size: 30px;
+    padding: 0;
+} 
+
+p{
+    color: yellow;
+    font-size: 20px;
+}
+
+label{
+    font-size: 20px;
+    font-weight: 700;
+    
 }
